# sentiment_service

./: .gitignore
sentiment/: Cargo.toml  sentiment_plotter.py
sentiment/src/: sentiment_client.rs  sentiment_service.rs
